<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtForgot_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#0E182C"
        android:textSize="30sp"
        android:text="@string/ForgotPassword"/>

    <TextView
        android:id="@+id/txtForgot_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:textColor="#757575"
        android:text="@string/forgotText" />

    <EditText
        android:id="@+id/edtForgot_Email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingLeft="10dp"
        android:background="@drawable/editbox"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/button_container_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:gravity="center"
        android:layout_marginBottom="20dp">

    <RelativeLayout
        android:id="@+id/btnNo_Container"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/button_container"
        android:layout_marginEnd="5dp">

        <TextView
            android:id="@+id/btnNo_Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/No"
            android:textColor="#0E182C"
            android:textSize="15sp" />
    </RelativeLayout>

        <ImageButton
            android:id="@+id/btnYes_Dialog"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_yes"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>