<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddProperty">

    <ProgressBar
        android:id="@+id/loadingWheel_AddProperty"
        android:layout_width="67dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="11dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/lightblue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblProperty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/AddProperty"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnAddPropertyImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:background="@drawable/changepicture_button"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/property_picture_card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/property_picture_card"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:elevation="2dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblProperty">
        <ImageView
            android:id="@+id/property_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_Address_AddProperty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/property_picture_card">
        <EditText
            android:id="@+id/edtAddress_AddProperty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/Address"
            android:textColor="@color/colorPrimaryDark"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_NumBedrooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_Address_AddProperty">
        <EditText
            android:id="@+id/edtNumBedrooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NumBedrooms"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="number"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_NumBathrooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_NumBedrooms">
        <EditText
            android:id="@+id/edtNumBathrooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NumBathrooms"
            android:textColor="@color/colorPrimaryDark"
            android:imeOptions="actionNext"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_NumGarages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_NumBathrooms">

        <EditText
            android:id="@+id/edtNumGarages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NumGarages"
            android:textColor="@color/colorPrimaryDark"
            android:imeOptions="actionGo"
            android:maxLines="1"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btnDone_AddProperty"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/done_button"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_NumGarages" />

</androidx.constraintlayout.widget.ConstraintLayout>